fix: remaining lint/formatting errors

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, lint
+envlist = lint
 isolated_build = true
 skipsdist = true
 
@@ -7,20 +7,24 @@ skipsdist = true
 deps =
   pyparsing
   mypy
-  pyparsing
   black
   isort
+  pylint
 commands = true
 
 [testenv:lint]
 ignore_errors = true
 commands =
     black --check .
-    isort -c rplugin test
+    isort -c .
     mypy .
     pylint --rcfile=.pylintrc .
 
 [testenv:format]
+deps =
+  pyparsing
+  black
+  isort
 commands =
     isort --atomic .
     black .
@@ -28,4 +32,3 @@ commands =
 [gh-actions]
 python =
     3.9: lint
-
