--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint
+envlist = py38, py39, py310, py311, lint
 isolated_build = true
 skipsdist = true
 
@@ -10,7 +10,8 @@ deps =
   black
   isort
   pylint
-commands = true
+  pytest
+commands = pytest
 
 [testenv:lint]
 ignore_errors = true
@@ -31,4 +32,7 @@ commands =
 
 [gh-actions]
 python =
-    3.9: lint
+    3.8: py38
+    3.9: py39, lint
+    3.10: py310
+    3.11: py311
