--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,7 @@
 [MASTER]
 
 [MESSAGES CONTROL]
-disable=E1101,W0511,W0612,W0613,W0212,W0221,W0703,W0622,W1113,C,R
+disable=E1101,W0511,W0612,W0613,W0212,W0221,W0703,W0622,W1113,W0719,C,R
 
 [BASIC]
 argument-rgx=[a-z_][a-z0-9_]{0,30}$
